# TEAM30

./: .gitignore  Dockerfile  README.md  generate_team30_meshes.py  generate_team30_meshes_3D.py  manufactured.py  output_3D_stats.csv  parametric_study.py  post_proc_time.py  pyproject.toml  ref_Br_Htheta_200.txt  ref_single_phase.txt  ref_three_phase.txt  requirements.txt  solve_3D_time.py  solve_3D_time_AV.py  solve_3D_time_AV_Block.py  solve_3D_time_AV_Direct.py  team30_A_phi.py  team30_freq.py  team30_time.py  team30ams.py  test.py  test_team30.py  topleft.py  utils.py
.github/workflows/: python.yml  time-domain.yml
cpp/: CMakeLists.txt  losses.py  main.cpp  nonlinear.hpp  team30.py  utils.hpp
cpp/meshes/: three_phase3D.h5  three_phase3D.msh  three_phase3D.xdmf
doc/: main.tex  references.bib  single_phase_tables.tex  three_phase_tables.tex
output_3D_B.bp/: data.0  md.0  profiling.json
