[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "TEAM30_examples"
version = "0.7.0"
dependencies = ["fenics-dolfinx>=0.7.0", "tqdm", "gmsh", "matplotlib", "pandas"]

[tool.setuptools]
packages = []


[tool.isort]
known_first_party = [""]
known_third_party = ["basix", "dolfinx", "ffcx", "ufl"]
known_mpi = ["mpi4py", "petsc4py"]
sections = [
    "FUTURE",
    "STDLIB",
    "MPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.mypy]
ignore_missing_imports = true
