[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "TEAM30_examples"
version = "0.7.0"
dependencies = [
    "fenics-dolfinx>=0.7.0",
    "tqdm",
    "gmsh",
    "matplotlib",
    "pandas",
    "ruff",
]

[tool.setuptools]
packages = []


[tool.isort]
known_first_party = [""]
known_third_party = ["basix", "dolfinx", "ffcx", "ufl"]
known_mpi = ["mpi4py", "petsc4py"]
sections = [
    "FUTURE",
    "STDLIB",
    "MPI",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

[tool.mypy]
ignore_missing_imports = true


[tool.ruff]
src = ["src", "tests"]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
]


[tool.ruff.lint.isort]
known-third-party = [
    "basix",
    "dolfinx",
    "ffcx",
    "ufl",
    "gmsh",
    "numpy",
    "pytest",
]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]
